--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,10 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
 
 .App-header {
-  background-color: #282c34;
+  /*background-color: #282c34;*/
+  background-color: #174c80;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,11 +19,21 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navbar {
+  background-color: #174c80;
 }
+
+.navbar-item {
+  color: #fff;
+}
+
+.results--section {
+  padding: 20px 0px;
+  margin-top: 40px;
+}
+
+h1 {
+  text-align: center;
+  font-size: 30px;
+}
+
