--- a/src/Today/Today.css
+++ b/src/Today/Today.css
@@ -10,18 +10,18 @@
     padding: 20px;
     margin: 20px 0;
     border-radius: 4px;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.);
 }
 .btc--section {
     text-align: center;
-    border-right: 1px solid #DAE1E9;
+    border-right: 1px solid #DAE1E8;
 }
 .btc--section h5 {
     font-size: 30px;
 }
 .icx--section {
     text-align: center;
-    border-right: 1px solid #DAE1E9;
+    border-right: 1px solid #DAE1E8;
 }
 .icx--section h5 {
     font-size: 30px;
